Update mirror to 1.7.4